// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Server is down when there is networkError 1`] = `
<div>
  <p>
    We are sorry but some error probably occured
  </p>
</div>
`;

exports[`should render UserSection when loginIn 1`] = `
<div>
  <LoginForm
    changeForm={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`should render UserSection when signingUp 1`] = `
<div>
  <SingUpForm
    changeForm={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`should render UserSection when user is loggedIn 1`] = `
<div>
  <LoggedIn
    filter={null}
    handleFilter={[Function]}
    name="Mark"
    onLogout={[Function]}
  />
</div>
`;
